# quake-dial

./: Cargo.toml
.github/: CODEOWNERS
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
