[package]
name = "quake-dial"
version = "0.1.0"
edition = "2024"

[dependencies]
accessibility-sys = "0.2.0"
anyhow = "1.0.99"
cocoa = "0.26.1"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
dirs = "6.0.0"
global-hotkey = "0.7.0"
objc = "0.2.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tauri = { version = "2.8.2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
tauri-build = "2.4.0"
