[package]
name = "quakedial"
version = "0.1.0"
authors = ["jascha030"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.0"
accessibility-sys = "0.2.0"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
objc = "0.2.7"
cocoa = "0.26.1"
dirs = "6.0.0"
anyhow = "1.0.99"
thiserror = "2.0.16"

[build-dependencies]
tauri-build = { version = "2.4.0" }
